# geomuse

./: .gitignore  README.md  pyproject.toml
fivear/: README.md  stuff.md
fivear/_number/: __init__.py  _number.py
fivear/chord/: _chord.py
fivear/distance/: _distance.py
fivear/duration/: __init__.py
fivear/envelope/: _envelope.py
fivear/fourier/: series.py
fivear/frequency/: frequency.py
fivear/integer/: _integer.py
fivear/interval/: _arithmetic.py  _bind.py  _interval.py  _ordering.py  _unit.py
fivear/io/: __init__.py
fivear/key/: _class.py  _element.py  _key.py
fivear/mode/: _mode.py
fivear/musical/: __init__.py
fivear/note/: _note.py
fivear/oscillation/: __init__.py  frequency.py
fivear/partition/: _partition.py
fivear/spectral/: frequency.py
fivear/track/: __init__.py  atom.py  bar.py  beat.py  block.py  frame.py  step.py
fivear/transform/: _transform.py
fivear/volume/: __init__.py  _volume.py  amplitude.py  base.py  decibel.py  phon.py
geomuse/distance/: _distance.py  _ordering.py  ordering.py
geomuse/fraction/: _fraction.py
geomuse/integer/: _integer.py
geomuse/morphism/: _transform.py
geomuse/partition/: _partition.py
geomuse/real/: __init__.py  _real.py
geomuse/root/: _root.py
music/__model/: random-thoughts.md
music/_line/: aural.py
music/class_/: _class.py
music/distance/: __init__.py  order.py
music/fraction/: _fraction.py
music/length/: __init__.py
music/partition/: __init__.py
music/shape/: _shape.py
music/volume/: __init__.py  _bind.py  _volume.py
tests/volume/: test_base.py
(+446 files in other folders)
