[tool.poetry]
name = "music"
version = "0.1.0"
description = "Music theory from a geometric perspective."
authors = ["jedhsu <jedhsu@pm.me>"]
readme = "README.md"
repository = "https://github.com/jedhsu/geomuse"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

depyth = { git = "https://github.com/jedhsu/depyth.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
